--- a/src/DotNetXri/DotNetXri.csproj
+++ b/src/DotNetXri/DotNetXri.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{3191B653-F76D-4C1A-9A5A-347BC3AAAAB7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>YOURLIBNAME</RootNamespace>
-    <AssemblyName>YOURLIBNAME</AssemblyName>
+    <RootNamespace>DotNetXri</RootNamespace>
+    <AssemblyName>DotNetXri</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -22,7 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <DocumentationFile>..\..\bin\debug\YOURLIBNAME.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\debug\DotNetXri.xml</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRules>-Microsoft.Design#CA1054;-Microsoft.Design#CA1056;-Microsoft.Design#CA1055</CodeAnalysisRules>
   </PropertyGroup>
@@ -34,7 +34,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <DocumentationFile>..\..\bin\debug\YOURLIBNAME.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\debug\DotNetXri.xml</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRules>-Microsoft.Design#CA1054;-Microsoft.Design#CA1056;-Microsoft.Design#CA1055</CodeAnalysisRules>
   </PropertyGroup>
@@ -87,5 +87,5 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\tools\YOURLIBNAME.Versioning.targets" />
+  <Import Project="..\..\tools\DotNetXri.Versioning.targets" />
 </Project>
