Updated XRI interfaces to reference relevant types.

--- a/src/DotNetXri/DotNetXri.csproj
+++ b/src/DotNetXri/DotNetXri.csproj
@@ -191,17 +191,17 @@
     <Content Include="Syntax\xri3\impl\XRI3Util.cs" />
     <Content Include="Syntax\xri3\impl\XRI3XRef.cs" />
     <Content Include="Syntax\xri3\package.html" />
-    <Content Include="Syntax\xri3\XRI.cs" />
-    <Content Include="Syntax\xri3\XRIAuthority.cs" />
-    <Content Include="Syntax\xri3\XRIFragment.cs" />
-    <Content Include="Syntax\xri3\XRILiteral.cs" />
-    <Content Include="Syntax\xri3\XRIPath.cs" />
-    <Content Include="Syntax\xri3\XRIQuery.cs" />
-    <Content Include="Syntax\xri3\XRIReference.cs" />
-    <Content Include="Syntax\xri3\XRISegment.cs" />
-    <Content Include="Syntax\xri3\XRISubSegment.cs" />
-    <Content Include="Syntax\xri3\XRISyntaxComponent.cs" />
-    <Content Include="Syntax\xri3\XRIXRef.cs" />
+    <Compile Include="Syntax\xri3\XRI.cs" />
+    <Compile Include="Syntax\xri3\XRIAuthority.cs" />
+    <Compile Include="Syntax\xri3\XRIFragment.cs" />
+    <Compile Include="Syntax\xri3\XRILiteral.cs" />
+    <Compile Include="Syntax\xri3\XRIPath.cs" />
+    <Compile Include="Syntax\xri3\XRIQuery.cs" />
+    <Compile Include="Syntax\xri3\XRIReference.cs" />
+    <Compile Include="Syntax\xri3\XRISegment.cs" />
+    <Compile Include="Syntax\xri3\XRISubSegment.cs" />
+    <Compile Include="Syntax\xri3\XRISyntaxComponent.cs" />
+    <Compile Include="Syntax\xri3\XRIXRef.cs" />
     <Content Include="Syntax\XRIAbsolutePath.cs" />
     <Content Include="Syntax\XRIAuthority.cs" />
     <Content Include="Syntax\XRIFragment.cs" />
