More completely ported classes.

--- a/src/DotNetXri/DotNetXri.csproj
+++ b/src/DotNetXri/DotNetXri.csproj
@@ -116,8 +116,7 @@
     <Compile Include="Client\Saml\Subject.cs" />
     <Compile Include="Client\Tools\XRILookup.cs" />
     <Compile Include="Client\Tools\XRITraceRt.cs" />
-    <Compile Include="Client\Util\DOM3Utils.cs" />
-    <Compile Include="Client\Util\DOMUtils.cs" />
+    <None Include="Client\Util\DOM3Utils.cs" />
     <Compile Include="Client\Util\IO.cs" />
     <Compile Include="Client\Util\PrioritizedList.cs" />
     <Compile Include="Client\Util\URLUtils.cs" />
